--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "dependencies": {
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-usemin": "~2.0.2",
+  "devDependencies": {
     "grunt": "~0.4.2",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-filerev": "^2.3.1",
+    "grunt-filerev-assets": "^0.3.2",
+    "grunt-usemin": "~2.0.2",
     "load-grunt-tasks": "~0.4.0"
   }
 }
